update description in index.html to include repository link

--- a/index.html
+++ b/index.html
@@ -243,7 +243,14 @@
       <header>
         <h1>GitHub Hands-On Practice</h1>
         <p class="description">
-          Learn essential Git workflows by contributing to this repository
+          Learn essential Git workflows by contributing to
+          <a
+            href="https://github.com/oreste-abizera/git-hands-on-lab.git"
+            class="repo-link"
+            target="_blank"
+          >
+            this repository </a
+          >.
         </p>
       </header>
 
