update footer in index.html to include credit to Growthwave

--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
         border-radius: 3px;
       }
 
+      .tips ul {
+        padding-left: 20px;
+      }
+
       .pr-info {
         background-color: #f1f8ff;
         border: 1px solid #c8e1ff;
@@ -459,7 +463,10 @@
 
       <div class="footer">
         <p>GitHub Practice Assignment - Learning collaborative Git workflows</p>
-        <p>Created for hands-on teaching</p>
+        <p>
+          Powered by
+          <a href="https://www.growthwave.tech" target="_blank"> Growthwave </a>
+        </p>
       </div>
     </div>
   </body>
