Add Alain IREBE to attendance list

--- a/attendance.html
+++ b/attendance.html
@@ -43,6 +43,9 @@
         Oreste Abizera <span class="timestamp">14 March 2025</span>
       </li>
       <!-- Add your name below this line -->
+      <li class="list-item">
+        Alain IREBE <span class="timestamp">14 March 2025</span>
+      </li>
     </ul>
   </body>
 </html>
