--- a/attendance.html
+++ b/attendance.html
@@ -50,6 +50,9 @@
       <li class="list-item">
         Emmanuel SEMAZA <span class="timestamp">14 March 2025</span>
       </li>
+      <li class="list-item">
+        Samuel Mugisha <span class="timestamp">14 March 2025</span>
+      </li>
     </ul>
   </body>
 </html>
