Add Alain IREBE's email to directory

--- a/emails.html
+++ b/emails.html
@@ -64,6 +64,11 @@
           <td>oreste-abizera</td>
         </tr>
         <!-- Add your information below this line -->
+        <tr>
+          <td>Alain IREBE</td>
+          <td>irebalain@gmail.com</td>
+          <td>irebealain</td>
+        </tr>
       </tbody>
     </table>
 
