Add [semazaemmanuel@gmail.com] to the directory

--- a/emails.html
+++ b/emails.html
@@ -64,6 +64,12 @@
           <td>oreste-abizera</td>
         </tr>
         <!-- Add your information below this line -->
+
+        <tr>
+          <td>Emmanuel SEMAZA</td>
+          <td>semazaemmanuel@gmail.com</td>
+          <td>emmanuel-semaza</td>
+        </tr>
       </tbody>
     </table>
 
