--- a/attendance.html
+++ b/attendance.html
@@ -53,6 +53,7 @@
       <li class="list-item">
         Samuel Mugisha <span class="timestamp">14 March 2025</span>
       </li>
+      <li class="list-item">Mutesa Willy</li><span class="timestamp">14 March 2025</span></li>
     </ul>
   </body>
 </html>
