--- a/attendance.html
+++ b/attendance.html
@@ -54,6 +54,9 @@
       <li class="list-item">
         ZARIZO FIKIRI Nicolas <span class="timestamp">14 March 2025</span>
       </li>
+      <li class="list-item">
+        Samuel Mugisha <span class="timestamp">14 March 2025</span>
+      </li>
     </ul>
   </body>
 </html>
